--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset='utf8'>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=5">
 
-    <title>Svelte app</title>
-    <meta name="description" content="Svelte app">
+    <title>Swedish bitter</title>
+    <meta name="description" content="Swedish bitter">
   </head>
 
   <body>
